* Fri Sep 14 2007 Jesse Keating <jkeating@redhat.com>
- Create repoview content in the tree
- Move the .composeinfo file into the directory we actually publish

* Wed Sep 12 2007 Jesse Keating <jkeating@redhat.com>
- Remove python2.5 needs (Mark McLoughlin)
- Consolidate the download code for easier maint. (Mark McLoughlin)
- Create a config class that can make using pungi modules easier. (Mark 
McLoughlin)
- Use url line in kickstart files as a repo

* Tue Sep 11 2007 Jesse Keating <jkeating@redhat.com>
- Fix a bug with default dest dir (notting)
- Include a man page (dcantrell)
- Fix a bug with file:// based repos

* Thu Aug 30 2007 Jesse Keating <jkeating@redhat.com>
- Fix some bugs with source iso creation
- Add source repo to kickstart file
- Add %end to %packages in kickstart file

* Tue Aug 28 2007 Jesse Keating <jkeating@redhat.com>
- Default flavor to blank.

* Mon Aug 27 2007 Jesse Keating <jkeating@redhat.com>
- Set up arch in __init__.py as it's needed for logging
- Add support for $releasever in repo uris.
- Set arch using rpmUtils, and do it in /usr/bin/pungi
- Add a kickstart file usable for composing Fedora 8 "Fedora"
- Fix bugs with $basearch and mirrorlist usage.

* Sun Aug 26 2007 Jesse Keating <jkeating@redhat.com>
- Add better support for %packages syntax using native pykickstart
- Add a cache dir for pungi (/var/cache/pungi) and a cli option to override
- Add root check.

* Sat Aug 25 2007 Jesse Keating <jkeating@redhat.com>
- Use a kickstart file as input now (for cdsize and package manifest)
- Turn pkglist into a pre-parsed package dictionary
- Arrange config setting logically
- Error out on usage if no config file passed
- Pass gather a ksparser object instead, needed for yum repos
  and more advanced package handling.
- Use ksparser to get repo(s) from kickstart config.
- Don't rely upon a yum conf, do all setup ourselves.

* Fri Aug 24 2007 Jesse Keating <jkeating@redhat.com>
- Remove a lot of configurable items and hard set them